adding deactivate button

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="toggle">Activate</button>
+    <div class="buttons">
+        <button id="deactivate">off</button>
+        <button id="activate">on</button>
+    </div>
     <script src="popup.js"></script>
 </body>
+
 </html>
